--- a/index.html
+++ b/index.html
@@ -148,7 +148,6 @@
                 
                 <div class="contact-info">
                     <h1>Yvonne Zhou</h1>
-                    <p>under construction</p>
                     <p>PhD Student, Computer Science</p>
                     <p>University of Maryland</p>
                     <p><strong>Email:</strong> skyzhou@umd.edu</p>
@@ -266,6 +265,12 @@
                     </div>
                 </div>
 
+
+                    <div class="item-entry">
+                          <p style="text-align:center; font-style:italic; color:gray;">
+                            🚧 This website is currently under construction. 🚧
+                          </p>
+                    </div>
 
 
                 
