--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yvonne Zhou - PhD Student</title> <style>
+    <title>Yvonne Zhou - PhD Student</title> 
+    <!-- <style>
         /* --- Body & Background --- */
         body {
             background-size: cover;
@@ -133,7 +134,8 @@
         #about a:hover {
             text-decoration: underline;
         }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
