--- a/index.html
+++ b/index.html
@@ -4,137 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Yvonne Zhou - PhD Student</title> 
-    <!-- <style>
-        /* --- Body & Background --- */
-        body {
-            background-size: cover;
-            background-position: center center;
-            background-attachment: fixed;
-            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-            line-height: 1.6;
-            color: #333;
-            margin: 0;
-            padding: 20px;
-        }
-        
-        /* --- Main Content Box --- */
-        .container {
-            max-width: 900px;
-            margin: 40px auto;
-            padding: 30px;
-            background-color: rgba(255, 255, 255, 0.97);
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-        }
-
-        /* --- Header --- */
-        .main-header {
-            display: flex;
-            justify-content: space-between;
-            align-items: flex-start;
-            border-bottom: 2px solid #eee;
-            padding-bottom: 20px;
-            margin-bottom: 30px;
-        }
-
-        /* --- Column 1: Profile Pic & Info --- */
-        .profile-left {
-            display: flex;
-            align-items: center;
-        }
-        .profile-pic {
-            width: 250px;
-            height: 250px;
-            border-radius: 50%;
-            object-fit: cover;
-            margin-right: 20px;
-            border: 3px solid #eee;
-        }
-        .contact-info h1 {
-            margin: 0;
-            color: #222;
-        }
-        .contact-info p {
-            margin: 5px 0;
-            color: #555;
-            font-size: 1.1em;
-        }
-
-        /* --- Column 2: Navigation --- */
-        .nav-right {
-            text-align: right;
-            flex-grow: 1;
-        }
-        .nav-right a {
-            display: block;
-            text-decoration: none;
-            color: #007bff;
-            font-weight: 500;
-            margin-bottom: 8px;
-            font-size: 1.1em;
-        }
-        .nav-right a:hover {
-            text-decoration: underline;
-        }
-
-        /* --- Main Content Sections --- */
-        section {
-            margin-bottom: 30px;
-            scroll-margin-top: 20px; 
-        }
-        h2 {
-            border-bottom: 1px solid #ddd;
-            padding-bottom: 5px;
-            color: #333;
-        }
-        
-        /* --- Publication & Project Styling --- */
-        ul {
-            padding-left: 20px;
-        }
-        li {
-            margin-bottom: 10px;
-        }
-        .item-entry {
-            margin-bottom: 15px;
-        }
-        .item-entry .title {
-            font-weight: bold;
-            font-size: 1.1em;
-        }
-        .item-entry .authors, .item-entry .tech {
-            font-style: italic;
-            color: #555;
-        }
-        .item-entry .venue, .item-entry .links {
-            color: #444;
-        }
-
-        /* --- Footer --- */
-        footer {
-            text-align: center;
-            margin-top: 30px;
-            padding-top: 20px;
-            border-top: 1px solid #eee;
-            font-size: 0.9em;
-            color: #777;
-        }
-
-        /* * NEW: This makes links inside the "About Me" section 
-         * match the color of the text around them.
-         */
-        #about a {
-            color: inherit; /* This tells the link to use the same color as its parent */
-            text-decoration: none; /* This removes the underline */
-        }
-
-        /* * Optional but recommended: This adds the underline back 
-         * ONLY when someone hovers over the link.
-         */
-        #about a:hover {
-            text-decoration: underline;
-        }
-    </style> -->
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -175,7 +44,7 @@
             <section id="about">
                 <h2>About Me</h2>
                 <p>
-                    I am a PhD student at <strong>University of Maryland</strong>, advised by Professor <a href="https://user.eng.umd.edu/~danadach/"><strong>Dana Dachman-Soled</strong></a>. 
+                    I am a PhD student at <strong>University of Maryland</strong>, advised by Professor <a class="links" href="https://user.eng.umd.edu/~danadach/">Dana Dachman-Soled</a>. 
                     My research focuses on <strong>cryptography</strong>.
                 </p>
             </section>
