--- a/index.html
+++ b/index.html
@@ -153,9 +153,9 @@
                     </p>
                     <p class="venue">
                         In *Proceedings of the 41st International Conference on Machine Learning (ICML), 2024*.
-                        [ <a href="papers/icml2024_dp_synthetic_data.pdf" target="_blank">PDF</a> ]
-                        [ <a href="https://arxiv.org/abs/2402.04375" target="_blank">arXiv</a> ] 
-                        [ <a href="https://github.com/DPML-syn/MarginalPreserving_DP_SyntheticData" target="_blank">Code</a> ]
+                        [ <a class="links" href="papers/icml2024_dp_synthetic_data.pdf" target="_blank">PDF</a> ]
+                        [ <a class="links" href="https://arxiv.org/abs/2402.04375" target="_blank">arXiv</a> ] 
+                        [ <a class="links" href="https://github.com/DPML-syn/MarginalPreserving_DP_SyntheticData" target="_blank">Code</a> ]
                     </p>
                 </div>
                 </section>
