--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CKKS Scheme — FHE Tutorial</title>
+  <link rel="stylesheet" href="../style.css" />
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
     :root{--bg:#f9fafb;--card:#ffffff;--muted:#4b5563;--accent:#0284c7}
@@ -29,8 +30,6 @@
     footer{margin-top:28px;color:var(--muted);font-size:13px;text-align:center}
     .note{background:#e0f2fe;padding:10px;border-radius:8px;color:#0369a1}
     .cite-note{margin-top:8px;font-size:11px;color:#6b7280}
-    .back-link {position: fixed; top: 16px; left: 16px;  font-size: 16px; color: #0284c7; text-decoration: none; font-weight: 500; z-index: 1000;}
-    .back-link:hover {text-decoration: underline;}
     table{border-collapse:collapse;margin-top:12px;width:100%}
     table, th, td{border:1px solid #ccc}
     th, td{padding:6px;text-align:center}
