--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale: 1.0" />
 <title>Mastermind Mini Game</title>
+<link rel="stylesheet" href="../style.css" />
 <style>
     body {
         background-color: #f6f1e7;
@@ -13,15 +14,6 @@
         min-height: 100vh;
         padding: 20px;
         box-sizing: border-box;
-    }
-
-    .back-link {
-        margin-bottom: 15px;
-        color: #333333;
-        text-decoration: none;
-        font-weight: 600;
-        font-size: 1.1rem;
-        /* Now part of the centered game-container */
     }
 
     h1 {
