--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -95,7 +95,7 @@
       </div>
     </header>
 
-    <section class="card">
+    <section class="card" id="contents">
         <h2>Contents</h2>
         <ol>
           <li><a href="#what-is-ckks">What is CKKS? (And Why We Need It)</a></li>
