--- a/FHE/fhe.html
+++ b/FHE/fhe.html
@@ -54,7 +54,7 @@
       <p>Fully Homomorphic Encryption (FHE) lets you compute on encrypted data and obtain an encrypted result which, when decrypted, matches the result of performing the same computation on the plaintexts. In practice, FHE schemes are complex — this page shows a simplified <em>toy</em> LWE-style construction to build intuition.</p>
     </section>
 
-    <section class="card">
+    <section class="card" id="contents">
       <h2>Contents</h2>
       <ol>
         <li><a href="#what-is-lwe">What is LWE (and Interactive Playground)</a></li>
