--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -130,7 +130,7 @@
         </div>
         <div class="flow-arrow-branch">→</div>
         <div class="flow-step-branch">
-          <strong>2. Encode & Scale</strong><br> x_scaled = 1.5·1000 = 1500
+          <strong>2. Encode & Scale</strong><br> x_scaled = 1.5·Δ = 1500
         </div>
         <div class="flow-arrow-branch">→</div>
         <div class="flow-step-branch">
