--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -132,7 +132,7 @@
       <div class="flow-arrow">→</div>
       <div class="flow-step">
         <strong>2. Encode & Scale</strong><br>
-        x_scaled = Round(1.5 · 1000) = 1500
+        x_scaled = Round(1.5 · Δ) = 1500
       </div>
       <div class="flow-arrow">→</div>
       <div class="flow-step">
