--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -122,63 +122,67 @@
       <h3>CKKS Data Flow</h3>
       <p>This diagram shows the full lifecycle of data using the values from above.</p>
       
-     <div class="flow-diagram-compact">
-    <!-- Row 1: Steps 1-3 -->
-    <div class="flow-row">
-      <div class="flow-step">
-        <strong>1. Plaintext</strong><br>
-        Real number x = 1.5
-      </div>
-      <div class="flow-arrow">→</div>
-      <div class="flow-step">
-        <strong>2. Encode & Scale</strong><br>
-        x_scaled = Round(1.5 · Δ) = 1500
-      </div>
-      <div class="flow-arrow">→</div>
-      <div class="flow-step">
-        <strong>3. Encrypt</strong><br>
-        (a, b = a·s + 1500 + e mod q)
+    <div class="flow-diagram-compact">
+  <!-- Row 1: Steps 1-3 -->
+  <div class="flow-row">
+    <div class="flow-step">
+      <strong>1. Plaintext</strong><br>
+      Real number x = <strong>1.5</strong>
+    </div>
+    <div class="flow-arrow">▼</div>
+    <div class="flow-step">
+      <strong>2. Encode & Scale</strong><br>
+      x_scaled = Round(1.5 · Δ) = <strong>1500</strong>
+    </div>
+    <div class="flow-arrow">▼</div>
+    <div class="flow-step">
+      <strong>3. Encrypt</strong><br>
+      LWE-style: (a, b = a·s + 1500 + e mod q)
+    </div>
+  </div>
+
+  <!-- Row 2: two-column layout -->
+  <div class="flow-row" style="margin-top:16px; width:100%; gap:24px;">
+    <!-- Left column: Step 4 only -->
+    <div class="flow-column">
+      <div class="flow-step" style="text-align:center;">
+        <strong>4. Homomorphic Operations</strong><br>
+        Operate on ciphertexts (with y=2.25 → ẏ=2250)
       </div>
     </div>
-  
-    <!-- Row 2: Step 4 centered -->
-    <div class="flow-step" style="margin-top:12px; width:auto;">
-      <strong>4. Homomorphic Operations</strong><br>
-      Operate on ciphertexts (Add / Multiply)
-    </div>
-  
-    <!-- Sub-rows for Addition and Multiplication -->
-    <div class="flow-sub-row">
+
+    <!-- Right column: Addition and Multiplication paths -->
+    <div class="flow-column">
       <!-- Top sub-row: Addition Path -->
       <div class="flow-step-sub">
         <strong>Addition Path</strong><br>
         C_add = Enc(1500) + Enc(2250)<br>
-        Decrypt → 3.75
+        Decrypt & Decode ≈ 3.75
       </div>
-    </div>
-  
-    <div class="flow-sub-row">
+
       <!-- Bottom sub-row: Multiplication Path -->
       <div class="flow-step-sub">
         <strong>Multiplication Path</strong>
         <div class="flow-row-horizontal">
           <div class="flow-step-sub">
-            5. Multiply<br> C_mult = Enc(1500) · Enc(2250)
+            5. Multiply<br>
+            C_mult = Enc(1500) · Enc(2250)
           </div>
           <div class="flow-arrow">→</div>
           <div class="flow-step-sub">
-            6. Rescale<br> C_mult / Δ = 3375
+            6. Rescale<br>
+            C_mult / Δ ≈ 3375
           </div>
           <div class="flow-arrow">→</div>
           <div class="flow-step-sub">
-            7. Decrypt & Decode<br> 3375 / 1000 ≈ 3.375
+            7. Decrypt & Decode<br>
+            3375 / Δ ≈ 3.375
           </div>
         </div>
       </div>
     </div>
   </div>
-
-
+</div>
 
 
     </section>
