--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -147,7 +147,8 @@
     <div class="flow-column">
       <div class="flow-step" style="text-align:center;">
         <strong>4. Homomorphic Operations</strong><br>
-        Operate on ciphertexts (with y=2.25 → ẏ=2250)
+        Operate on ciphertexts <br>
+        (with y=2.25 → ẏ=2250)
       </div>
     </div>
 
