--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -132,7 +132,7 @@
     <div class="flow-arrow">▼</div>
     <div class="flow-step">
       <strong>2. Encode & Scale</strong><br>
-      x_scaled = Round(1.5 · Δ) = <strong>1500</strong>
+      \(\tilde{x} = \text{Round}(1.5 \cdot \Delta) = \mathbf{1500}\)
     </div>
     <div class="flow-arrow">▼</div>
     <div class="flow-step">
@@ -148,7 +148,7 @@
       <div class="flow-step" style="text-align:center;">
         <strong>4. Homomorphic Operations</strong><br>
         Operate on ciphertexts <br>
-        (with y=2.25 → ẏ=2250)
+        \text{(with } y = 2.25 \rightarrow \tilde{y} = \mathbf{2250}\text{)}
       </div>
     </div>
 
