--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -148,7 +148,7 @@
       <div class="flow-step" style="text-align:center;">
         <strong>4. Homomorphic Operations</strong><br>
         Operate on ciphertexts <br>
-        \text{(with } y = 2.25 \rightarrow \tilde{y} = \mathbf{2250}\text{)}
+        \( \text{(with } y = 2.25 \rightarrow \tilde{y} = \mathbf{2250}\text{)} \)
       </div>
     </div>
 
