--- a/FHE/fhe.html
+++ b/FHE/fhe.html
@@ -227,9 +227,9 @@
       <h2>BGV Scheme</h2>
       <p>The BGV scheme (named for its authors: Brakerski, Gentry, and Vaikuntanathan) is a foundational "second-generation" FHE scheme, often grouped with BFV. It is based on the Ring-LWE problem and is designed for efficient and exact arithmetic on integers.</p>
       <p>Its primary innovation was a new <strong>modulus switching</strong> technique, which effectively "shrinks" the ciphertext and its noise in a controlled way after each multiplication. This allows for deeper computational circuits before bootstrapping is required.</p>
-      <p style="margin-top: 16px;">
+      <!-- <p style="margin-top: 16px;">
         <a href="bgv.html" style="font-weight: 500;">Learn more about the BGV Scheme &rarr;</a>
-      </p>
+      </p> -->
     </section>
 
     <section class="card" id="ckks">
@@ -245,9 +245,9 @@
       <h2>TFHE Scheme</h2>
       <p>TFHE (Fast Fully Homomorphic Encryption over the Torus) is a unique FHE scheme that operates at the bit level. Instead of encrypting large numbers, it is optimized for encrypting individual bits and performing <strong>boolean operations</strong> (like AND, OR, NOT).</p>
       <p>Its most famous feature is its extremely fast <strong>bootstrapping</strong>, which can "refresh" an encrypted bit in milliseconds. This allows for the evaluation of any arbitrary circuit or function, including running complex conditional logic (like "if" statements) on encrypted data.</p>
-      <p style="margin-top: 16px;">
+      <!-- <p style="margin-top: 16px;">
         <a href="tfhe.html" style="font-weight: 500;">Learn more about the TFHE Scheme &rarr;</a>
-      </p>
+      </p> -->
     </section>
 
     <footer>
