--- a/snack_break.html
+++ b/snack_break.html
@@ -70,7 +70,7 @@
 
     <div class="container">
         
-        <a href="index_20251110.html" class="back-link">&larr; Back to Yvonne</a>
+        <a href="index.html?v=20251110" class="back-link">&larr; Back to Yvonne</a>
         
         <h1>🥨 Snack Break</h1>
 
