--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -4,7 +4,11 @@
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale: 1.0" />
 <title>Mastermind Mini Game</title>
-<link rel="stylesheet" href="../style.css" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+    
+<link rel="stylesheet" href="style.css?v=20251110">
 <style>
     body {
         background-color: #f6f1e7;
@@ -220,7 +224,8 @@
 <body>
 
 <div class="game-container">
-    <a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
+    <a href="../snack_break.html?v=20251110" class="back-link">&larr; Back to 🥨</a>
+
     <h1>Mastermind Mini Game</h1>
     
     <div class="controls">
