--- a/game/n-back.html
+++ b/game/n-back.html
@@ -4,7 +4,11 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>N-back Brain Game</title>
-<link rel="stylesheet" href="../style.css" />
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+    <meta http-equiv="Pragma" content="no-cache" />
+    <meta http-equiv="Expires" content="0" />
+<link rel="stylesheet" href="../style.css?v=20251110">
+
 <style>
   body {
     font-family: Arial, sans-serif;
@@ -87,7 +91,8 @@
 </style>
 </head>
 <body>
-<a href="../snack_break.html" class="back-link">&larr; Back to 🥨</a>
+<a href="../snack_break.html?v=20251110" class="back-link">&larr; Back to 🥨</a>
+
 
 <h1>N-back Brain Training</h1>
 
