--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
+  <meta http-equiv="Pragma" content="no-cache" />
+  <meta http-equiv="Expires" content="0" />
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CKKS Scheme — FHE Tutorial</title>
-  <link rel="stylesheet" href="../style.css" />
+  <link rel="stylesheet" href="../style.css?v=20251110" />
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
     :root{--bg:#f9fafb;--card:#ffffff;--muted:#4b5563;--accent:#0284c7}
@@ -43,7 +47,8 @@
   </style>
 </head>
 <body>
-  <a href="fhe.html" class="back-link">&larr; Back to FHE Intro</a>
+  <a href="fhe.html?v=20251110" class="back-link">&larr; Back to FHE Intro</a>
+
   
   <div class="container">
     <header>
