--- a/game/mastermind.html
+++ b/game/mastermind.html
@@ -8,7 +8,7 @@
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
     
-<link rel="stylesheet" href="style.css?v=20251110">
+<link rel="stylesheet" href="../style.css?v=20251110">
 <style>
     body {
         background-color: #f6f1e7;
