--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -8,7 +8,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>CKKS Scheme — FHE Tutorial</title>
-  <link rel="stylesheet" href="../style.css?v=20251110" />
+  <link rel="stylesheet" href="../style.css?v=zTEfWdo/alrOjIbFsIc30bmoXtKMl//JRc2+f6R/OkQ=" />
   <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <style>
     :root{--bg:#f9fafb;--card:#ffffff;--muted:#4b5563;--accent:#0284c7}
@@ -47,7 +47,7 @@
   </style>
 </head>
 <body>
-  <a href="fhe.html?v=20251110" class="back-link">&larr; Back to FHE Intro</a>
+  <a href="fhe.html?v=zTEfWdo/alrOjIbFsIc30bmoXtKMl//JRc2+f6R/OkQ=" class="back-link">&larr; Back to FHE Intro</a>
 
   
   <div class="container">
@@ -362,7 +362,7 @@
     Citations:<br>
     [2] Lyubashevsky, V., Peikert, C., & Regev, O. (2013). Lattice-based Cryptography.<br>
     [3] FHE.org Community. (n.d.). History of FHE: A Timeline. Retrieved from https://fhe.org/history/<br>
-    [4] Cheon, J. H., Kim, A., Kim, M., & Song, Y. (2017). Homomorphic Encryption for Arithmetic of Approximate Numbers.
+    [4] <a href="https://eprint.iacr.org/2016/421.pdf" target="_blank">Cheon, J. H., Kim, A., Kim, M., & Song, Y. (2017). Homomorphic Encryption for Arithmetic of Approximate Numbers.</a>
   </p>
 </footer>
   </div>
