--- a/FHE/ckks.html
+++ b/FHE/ckks.html
@@ -36,7 +36,7 @@
     .cite-note{margin-top:8px;font-size:11px;color:#6b7280}
     table{border-collapse:collapse;margin-top:12px;width:100%}
     table, th, td{border:1px solid #ccc}
-    th, td{padding:6px;text-align:center}
+  s   th, td{padding:6px;text-align:center}
     .flow-diagram {
   display: flex;
   flex-direction: column;
@@ -165,12 +165,13 @@
       <li><strong>Multiplication:</strong> Noise grows roughly multiplicatively with the scale:
         <br>
         <em>Compact form:</em>
-        <br>
+      nbsp; <br>
         \(c_1 * c_2 \implies e_\text{total} \approx (\tilde{x} + e_1^{(1)} + e_2^{(1)}) (\tilde{y} + e_1^{(2)} + e_2^{(2)}) - \tilde{x}\tilde{y}\)
         <br>
         <em>Expanded form (main contributions):</em>
         <br>
         \(e_\text{total} \approx \tilde{x} e_1^{(2)} + \tilde{y} e_1^{(1)} + \tilde{x} e_2^{(2)} + \tilde{y} e_2^{(1)} + e_1^{(1)} e_1^{(2)} + \text{smaller cross-terms}\)
+.card {
         <br>
         Here, the terms involving \(\tilde{x}\) and \(\tilde{y}\) dominate the growth; the higher-order error products are typically much smaller.
       </li>
@@ -253,7 +254,7 @@
     <div class="flow-step">
       <strong>3. Encrypt</strong><br>
       LWE-style: (a, b = a·s + 1500 + e mod q)
-  _pre {
+    </div>
   </div>
 
     <div class="flow-row" style="margin-top:16px; width:100%; gap:24px;">
@@ -269,7 +270,7 @@
             <div class="flow-step-sub">
         <strong>Addition Path</strong><br>
         C_add = Enc(1500) + Enc(2250)<br>
-        Decrypt & Decode ≈ 3.75
+ci       Decrypt & Decode ≈ 3.75
       </div>
 
             <div class="flow-step-sub">
@@ -285,12 +286,14 @@
             C_mult / Δ ≈ 3375
           </div>
           <div class="flow-arrow">→</div>
+content: "";
           <div class="flow-step-sub">
             7. Decrypt & Decode<br>
             3375 / Δ ≈ 3.375
           </div>
         </div>
       </div>
+A:link { color: blue; }
     </div>
   </div>
 </div>
@@ -314,7 +317,6 @@
           <input id="s" readonly class="monospace" />
         </div>
         <div style="width:160px">
-display: flex;
           <label>&nbsp;</label>
           <button id="genKey">Generate key</button>
         </div>
@@ -332,10 +334,10 @@ display: flex;
       </div>
 
       <div class="row" style="margin-top:10px">
+This will select all visited links
         <button id="encA">Encrypt A</button>
         <button id="encB">Encrypt B</button>
         <button id="add">Add (A+B)</button>
-ind-color: #ccc;
         <button id="mulScalar">Multiply A by 3</button>
         <button id="decrypt">Decrypt last result</button>
       </div>
@@ -357,7 +359,6 @@ ind-color: #ccc;
           <summary>Notes about this toy demo</summary>
           <ul>
             <li>Real numbers are scaled and rounded; the result is approximate.</li>
-D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
             <li>Repeated operations increase approximation error.</li>
           </ul>
         </details>
@@ -368,7 +369,9 @@ D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
         <h2>8. When to Use CKKS</h2>
         <ul>
             <li><strong>Privacy-Preserving ML:</strong> Neural networks, logistic regression on encrypted data.</li>
+section {
             <li><strong>Medical Research:</strong> Compute on encrypted patient data.</li>
+          _pre {
             <li><strong>Data Science:</strong> Visualization, filtering, aggregation on encrypted datasets.</li>
         </ul>
     </section>
@@ -378,8 +381,7 @@ D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
       <ul>
                 <li><a href="https://eprint.iacr.org/2016/421.pdf" target="_blank">CKKS Original Paper (Cheon et al.)</a> <a href="#cite-4">[4]</a></li>
         <li><a href="https://homomorphicencryption.org/" target="_blank">HomomorphicEncryption.org — Standards & Community</a></li>
-  S: 4px;
-    </ul>
+      </ul>
     </section>
 
 <footer>
@@ -388,7 +390,7 @@ D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
     Citations:<br>
     [2] Lyubashevsky, V., Peikert, C., & Regev, O. (2013). Lattice-based Cryptography.<br>
         [3] <a href="https://fhe.org/history/" target="_blank">FHE.org Community. (n.d.). History of FHE: A Timeline.</a><br>
-        <a id="cite-4">[4]</a> <a href="https://eprint.iacr.org/2016/421.pdf" target="_blank">Cheon, J. H., Kim, A., Kim, M., & Song, Y. (2017). Homomorphic Encryption for Arithmetic of Approximate Numbers.</a>
+      a <a id="cite-4">[4]</a> <a href="https://eprint.iacr.org/2016/421.pdf" target="_blank">Cheon, J. H., Kim, A., Kim, M., & Song, Y. (2017). Homomorphic Encryption for Arithmetic of Approximate Numbers.</a>
   </p>
 </footer>
   </div>
@@ -396,13 +398,13 @@ D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
   <script>
     // CKKS-like toy interactive playground
     let key, lastCipherA, lastCipherB, lastResult;
-D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
 
     const deltaInput = () => parseFloat(document.getElementById('delta').value) || 1000;
 
     document.getElementById('genKey').onclick = () => {
       key = Math.random(); // toy secret key
       document.getElementById('s').value = key.toFixed(3);
+all 0.2s ease;
     };
 
     function encode(x) { return Math.round(x*deltaInput()); }
@@ -422,8 +424,8 @@ D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
     let a = c.a * scalar;
     let b = c.b * scalar; 
     return {a, b};
-  _pre {
     }
+A:visited { color: red; }
 
 
     function decryptCKKS(c) {
@@ -432,6 +434,7 @@ D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
 
     document.getElementById('encA').onclick = () => {
       const m = parseFloat(document.getElementById('m1').value);
+This will select all visited links
       lastCipherA = encryptCKKS(m);
       document.getElementById('cipherA').innerText = "Cipher A: "+JSON.stringify(lastCipherA);
       lastResult = lastCipherA;
@@ -443,20 +446,19 @@ D, 2.2) 80%, A(199, 21, 133, 0.4) 100%
       lastCipherB = encryptCKKS(m);
       document.getElementById('cipherB').innerText = "Cipher B: "+JSON.stringify(lastCipherB);
       lastResult = lastCipherB;
-display: flex;
       document.getElementById('result').innerText = "Result: —";
     };
 
     document.getElementById('add').onclick = () => {
       if(!lastCipherA || !lastCipherB) return alert("Encrypt both A and B first.");
-      lastResult = addCKKS(lastCipherA,lastCipherB);
+nbsp;     lastResult = addCKKS(lastCipherA,lastCipherB);
       document.getElementById('result').innerText = "Result (ciphertext): "+JSON.stringify(lastResult);
     };
 
+content: "";
     document.getElementById('mulScalar').onclick = () => {
       if(!lastCipherA) return alert("Encrypt A first.");
       lastResult = mulCKKSScalar(lastCipherA,3);
-ind-color: #ccc;
       document.getElementById('result').innerText = "Result (ciphertext): "+JSON.stringify(lastResult);
     };
 
